[gd_scene load_steps=2 format=3 uid="uid://dcd443uceby6l"]

[ext_resource type="Script" path="res://scene/prototype/generator/prototype_generator.gd" id="1_0g8kg"]

[node name="PrototypeGenerator" type="Control" node_paths=PackedStringArray("label", "timer", "button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0g8kg")
label = NodePath("Label")
timer = NodePath("Timer")
button = NodePath("Button")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 39.0
grow_horizontal = 2
theme_type_variation = &"HeaderLarge"
text = "Stardust : <no_value>"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
custom_minimum_size = Vector2(320, 80)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "Start generating stardust"

[node name="Timer" type="Timer" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
